--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -85,8 +85,8 @@ The Nv0, Nv, Ov and Sv outputs are per-species; the EIR outputs are single value
 || 32 || Vector_Nv  || n ||  Mosquito population size ||
 || 33 || Vector_Ov  || n ||  Number of infected mosquitoes ||
 || 34 || Vector_Sv  || n ||  Number of infectious mosquitoes ||
-|| 35 || Vector_EIR_Input  || n ||  Input EIR (Expected EIR entered into scenario file) ||
-|| 36 || Vector_EIR_Simulated  || n ||  Simulated EIR (EIR output by the vector model) ||
+|| 35 || Vector_EIR_Input  || n ||  Input EIR (Expected EIR entered into scenario file). Units: innoculations per person per timestep. ||
+|| 36 || Vector_EIR_Simulated  || n ||  Simulated EIR (EIR output by the vector model). Units: innoculations per person per timestep. ||
 || 37 || || || (removed) ||
 || 38 || || || (removed) ||
 || 39 || Clinical_RDTs  || n ||  Number of Rapid Diagnostic Tests used ||
