Edited wiki page Binaries through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1336 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -4,11 +4,12 @@ Precompiled Binaries for windows, macosx and linux.
 
 It's now possible to download Precompiled Binaries from the openmalaria repository.
 
-Start by making a folder wherever you want to use OpenMalaria. Then, you need to download one of the archives here: [http://openmalaria.googlecode.com/svn/download] (latest version recommended).
+Start by making a folder wherever you want to use OpenMalaria. Then, you need to download one of the archives here (The links given point to the latest versions):
 
- * win32.zip
- * macosx.tar.bz2 / .tgz
- * linux32.tar.bz2
+ * [http://openmalaria.googlecode.com/svn/download/openmalariaApps/openmalaria-647/win32/openmalaria-647.zip win32]
+ * [http://openmalaria.googlecode.com/svn/download/openmalariaApps/openmalaria-647/macosx/openmalaria-647.zip macosx]
+ * [http://openmalaria.googlecode.com/svn/download/openmalariaApps/openmalaria-647/gnu32/openmalaria-647.zip gnu32]
+ * [http://openmalaria.googlecode.com/svn/download/openmalariaApps/openmalaria-647/gnu64/openmalaria-647.zip gnu64]
 
 Extract whichever you download into your openmalaria folder. Within this, move everything in the common folder into the one above (alongside the executable). On windows, you should be able to (double) click on the runOpenMalaria.bat file to test the program will run (if not, see below). On other platforms, this doesn't appear to work but you can run it from a command line (see [SetupOverview Getting Started]).
 
@@ -22,8 +23,7 @@ If this doesn't help, please contact us (or better, open an [http://code.google.
 
 Now it works, I should tell you what all the files are:
 
-|| openMalaria[.exe], any .dll files || binary files (executable & libraries) ||
-|| runOpenMalaria.bat/.sh || script file for running openmalaria (see [SetupOverview Getting Started]) ||
+|| openMalaria[.exe]|| binary files (executable)||
 || scenario_VER.xsd || schema file (formally describes what the xml files may contain); currently version 17 is used while 18 is under development ||
 || scenario.xml || An example scenario document (this one is simply a copy of examples/scenarioVecFullTestII.xml) ||
 || autoRegressionParameters.csv, densities.csv || auxiliary data files for openmalaria ||
