Edited wiki page openmalariaTools through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1402 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/openmalariaTools.wiki
+++ b/wiki/openmalariaTools.wiki
@@ -10,7 +10,7 @@ Please be aware that openmalariaTools needs for some functionalities that java s
 
 openmalariaTools features:
 
-  * Experiment creator
+  * [http://openmalaria.googlecode.com/svn/application_deployment/screenshots/beta_3/experiment_creator.jpg Experiment creator]
   * Basic scenario editor 
   * Batch mode 
   * Live graph integration
